fix: contrast issues on left panel and css layout issues

--- a/core_explore_keyword_app/static/core_explore_keyword_app/user/css/search/search.css
+++ b/core_explore_keyword_app/static/core_explore_keyword_app/user/css/search/search.css
@@ -6,10 +6,12 @@
 }
 
 .selectAllGlobalTemplateButton {
+    color: #0043de;
     font-size: 0.6em;
 }
 
 .selectAllUserTemplateButton {
+    color: #0043de;
     font-size: 0.6em;
 }
 
